# Wendell-32-4

./: .dockerignore  .gitignore  Cargo.toml  CreateAOAIDeployment_create-aoai-deployment.mdCommands.md  Dockerfile  README.md  agent_34_rest_api_gateway.py  agent_integrator.py  agent_wendell.py  base_agent.py  deploy-azure.sh  docker-compose.yml  evaluate.py  generate_test.py  omnisleuth.py  requirements.txt  startup.sh  wsgi.py
.github/workflows/: build.yml
agents/: Cargo.toml  LedgerIngestor.py  afia.rs  afia_shadow.rs  agent01.rs  agent02.rs  agent03_shadow.rs  agent04.rs  agent04_shadow.rsnano  agent05_shadow.rs  agent06.rs  agent06_shadow.rs  agent09.rs  agent09_shadow.rs  agent10.rs  agent11.rs  agent12.rs  agent13.rs  agent14.rs  agent15.rs  agent_34_rest_api.py  agent_42_sec_crawler.py  file_logger.py  hia.rs  hia_shadow.rs
agents/src/: agent02_shadow.rs  agent03.rs  agent05.rs  agent07.rs  agent07_shadow.rs  agent08.rs  agent08_shadow.rs  agent10_shadow.rs  agent11_shadow.rs  agent13_shadow.rs  agent14_shadow.rs  agent15.rs  agent16.rs  agent16_shadow.rs  lib.rs
dashboard/: Cargo.toml
dashboard/src/: main.rs
dashboard_shadow/: Cargo.toml
dashboard_shadow/src/: main.rs
hia/: Cargo.toml
hia/src/: main.rs
hia_shadow/: Cargo.toml
hia_shadow/src/: main.rs
lib/: __init__.py  rabbitmq.py
security/: __init__.py  audit.py  auth.py  config.py  encryption.py  validators.py
src/: lib.rs
templates/: dashboard.html
wendell/: Cargo.toml
wendell/src/: main.rs
